FiScEIncludedir=${includedir}/fyc
FiScEInclude_HEADERS = \
	fyc/Class.h \
	fyc/ClassLoader.h \
	fyc/CoreHandlers.h \
	fyc/Data.h \
	fyc/Debug.h \
	fyc/Global.h \
	fyc/HashMap.h \
	fyc/Heap.h \
	fyc/LinkedList.h \
	fyc/Portable.h \
	fyc/Resource.h \
	fyc/String.h \
	fyc/Structs.h \
	fyc/Thread.h \
	fyc/ThreadManager.h \
	fyc/Utf8.h \
	fyc/VMContext.h \
	fyc/VMPortable.h
